--- a/src/main/resources/templates/compute.mustache.save.1
+++ b/src/main/resources/templates/compute.mustache.save.1
@@ -8,9 +8,8 @@
         <textarea name="input1" rows="10" cols="30">
         </textarea>
         <textarea name="input2" rows="10" cols="30">
-        </textarea>
-        <textarea name="input3" rows="10" cols="30">
-        </textarea>
+        </textarea
+>
         <br>
         <input type="submit">
   </form>
